Bug 824454; use the resolution scale in OMTA transforms. r=cjones; a=blocking-basecamp